listings/ch04-understanding-ownership/no-listing-19-slice-error/output.txt
$ cargo run
   Compiling ownership v0.1.0 (file:///progetti/ownership)
error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
  --> src/main.rs:19:5
   |
17 |     let parola = prima_parola(&s);
   |                               -- immutable borrow occurs here
18 |
19 |     s.clear(); // errore!
   |     ^^^^^^^^^ mutable borrow occurs here
20 |
21 |     println!("la prima parola è: {parola}");
   |                                   ------ immutable borrow later used here

For more information about this error, try `rustc --explain E0502`.
error: could not compile `ownership` (bin "ownership") due to 1 previous error
